# LearnLab

./: .gitignore  .prettierignore  README.md  SRS-LearnLab.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
docs/: ACTIVITY_PLUGINS.md  ADR-001-experience-runtime-v2.md  ARCHITECTURE.md  AUTHORING.md  BRILLIANT_REWRITE_PLAN.md  BUILD_PLAN.md  CAMPAIGN_MAPS.md  DECISIONS.md  DIAGNOSE_REPAIR_TEMPLATE.md  EXPERIENCE_RUNTIME_V2_EVALUATION.md  EXPERIENCE_RUNTIME_V2_PLAN.md  EXPERIENCE_RUNTIME_V2_RESUME.md  EXPERIENCE_RUNTIME_V2_ROLLOUT.md  EXPERIENCE_RUNTIME_V2_SCHEMA.md  EXPERIENCE_RUNTIME_V2_VERTICAL_SLICE.md  Evidence_Based_Design_for_learning  F4_TEMPLATES.md  LEARNER_HOME.md  LEARNLAB_STUDIO.md  LOCAL_RECOMMENDATIONS.md  MISSION_EFFECTS.md  MIXED_REVIEW_SESSIONS.md  PLAYTEST_DIAGNOSTICS.md  PYTHON_ITEMS.md  SCENE_PRESENTATION.md  SCREENS.md  V1_CONTENT_MIGRATION_INVENTORY.md  V2_QUALITY_BUDGETS.md  (+4 more)
python/: pyproject.toml
python/courselib/: __init__.py  ai.py  cs.py  maths.py  physics.py
python/learnsdk/: __init__.py  _bridge.py  checking.py  components.py  draw.py  item.py  plot.py  quiz.py  rand.py  simulation.py
python/tests/: conftest.py  test_checking.py  test_components.py  test_courselib_ai.py  test_courselib_cs.py  test_courselib_maths.py  test_courselib_physics.py  test_item.py  test_multistep.py  test_plot.py  test_protocol_fixtures.py  test_public_api.py  test_quiz.py  test_quiz_rendering.py  test_rand.py  test_reference_items.py  test_serialisation.py  test_simulation.py  test_smoke.py
(+1068 files in other folders)
